--- a/dox/user_guide.dox
+++ b/dox/user_guide.dox
@@ -917,7 +917,7 @@ The following tables describe the various instructions with their formats and th
 <tr><td>IA0        </td><td> IADD  </td><td>(<b>I</b>nteger <b>Add</b>)                                 </td><td> 001000 </td><td> {FR,DM},{FM,DR},{FX,DM},{FM,DX},{FR,DM,DX},{FX,DM,DX},{FM,FX,DX},{FM,FX,DR},{FR,DR},{FR,DX},{FX,DR},{FX,DX},{FR,DM},{FL,DR},{FL,DX},{FM,DM},{FL,DM},{EX,DR},{EX,DX},{EX,DM}    </td><td> FL,EX:[-32768,32767]{DM,FL}:[-2048,2047] </td><td> Mem,Lit,Mem + Mem,Mem + Lit     </td><td> Adds memory loc and a register together or a register and a register                                                                                                    </td></tr>
 <tr><td>IA1        </td><td> IMAD  </td><td>(<b>I</b>nteger <b>M</b>ultiply and <b>Ad</b>d)             </td><td> 001001 </td><td> {FR,DM},{FM,DR},{FX,DM},{FM,DX},{FR,DM,DX},{FX,DM,DX},{FM,FX,DX},{FM,FX,DR},{FR,DR},{FR,DX},{FX,DR},{FX,DX},{FR,DM},{FL,DR},{FL,DX},{FM,DM},{FL,DM},{EX,DR},{EX,DX},{EX,DM}    </td><td> FL,EX:[-32768,32767]{DM,FL}:[-2048,2047] </td><td> Mem,Lit,Mem + Mem,Mem + Lit     </td><td> Multiplys memory loc or register with a register or memory loc and adds memory loc or register to total                                                                 </td></tr>
 <tr><td>IA2        </td><td> IAA   </td><td>(<b>I</b>nteger <b>A</b>dd <b>A</b>bsolute)                 </td><td> 001010 </td><td> {FR,DM},{FM,DR},{FX,DM},{FM,DX},{FR,DM,DX},{FX,DM,DX},{FM,FX,DX},{FM,FX,DR},{FR,DR},{FR,DX},{FX,DR},{FX,DX},{FR,DM},{FL,DR},{FL,DX},{FM,DM},{FL,DM},{EX,DR},{EX,DX},{EX,DM}    </td><td> FL,EX:[-32768,32767]{DM,FL}:[-2048,2047] </td><td> Mem,Lit,Mem + Mem,Mem + Lit     </td><td> Adds absolute value of memory loc to a register or absolute value register to memory loc or absolute register to register                                               </td></tr>
-<tr><td>IA3        </td><td> ISRG  </td><td>(<b>I</b>nteger <b>S</b>um <b>R</b>ang<b>e</b>)             </td><td> 001011 </td><td> {NW,FM,DR},{NW,FM,DX}                                                                                                                                                          </td><td> FL,EX:[-4096,4095]                       </td><td> Dest-Range                      </td><td> Sums all the numbers from mref to mref+NW                                                                                                                               </td></tr>
+<tr><td>IA3        </td><td> ISRG  </td><td>(<b>I</b>nteger <b>S</b>um <b>R</b>ang<b>e</b>)             </td><td> 001011 </td><td> {NW,FM,DR},{NW,FM,DX}                                                                                                                                                          </td><td>                      					 </td><td> Dest-Range                      </td><td> Sums all the numbers from mref to mref+NW                                                                                                                               </td></tr>
 <tr><td>IA4        </td><td> ISUB  </td><td>(<b>I</b>nteger <b>Sub</b>traction)                         </td><td> 001100 </td><td> {FR,DM},{FM,DR},{FX,DM},{FM,DX},{FR,DM,DX},{FX,DM,DX},{FM,FX,DX},{FM,FX,DR},{FR,DR},{FR,DX},{FX,DR},{FX,DX},{FR,DM},{FL,DR},{FL,DX},{FM,DM},{FL,DM},{EX,DR},{EX,DX},{EX,DM}    </td><td> FL,EX:[-32768,32767]{DM,FL}:[-2048,2047] </td><td> Mem,Lit,Mem + Mem,Mem + Lit     </td><td> Subtracts memory loc and a register together or a register and another register                                                                                         </td></tr>
 <tr><td>IA5        </td><td> IMUL  </td><td>(<b>I</b>nteger <b>Mul</b>tiplication)                      </td><td> 001101 </td><td> {FR,DM},{FM,DR},{FX,DM},{FM,DX},{FR,DM,DX},{FX,DM,DX},{FM,FX,DX},{FM,FX,DR},{FR,DR},{FR,DX},{FX,DR},{FX,DX},{FR,DM},{FL,DR},{FL,DX},{FM,DM},{FL,DM},{EX,DR},{EX,DX},{EX,DM}    </td><td> FL,EX:[-32768,32767]{DM,FL}:[-2048,2047] </td><td> Mem,Lit,Mem + Mem,Mem + Lit     </td><td> Mulitplys memory loc and a register together or a register and another register                                                                                         </td></tr>
 <tr><td>IA6        </td><td> IDIV  </td><td>(<b>I</b>nteger <b>Div</b>ision)                            </td><td> 001110 </td><td> {FR,DM},{FM,DR},{FX,DM},{FM,DX},{FR,DM,DX},{FX,DM,DX},{FM,FX,DX},{FM,FX,DR},{FR,DR},{FR,DX},{FX,DR},{FX,DX},{FR,DM},{FL,DR},{FL,DX},{FM,DM},{FL,DM},{EX,DR},{EX,DX},{EX,DM}    </td><td> FL,EX:[-32768,32767]{DM,FL}:[-2048,2047] </td><td> Mem,Lit,Mem + Mem,Mem + Lit     </td><td> Divides memory loc and a register together or a register and anotherregister                                                                                            </td></tr>
@@ -941,13 +941,13 @@ The following tables describe the various instructions with their formats and th
 <tr><td>JT5        </td><td> TRLK  </td><td>(<b>Tr</b>ansfer and <b>L</b>ink)                           </td><td> 100101 </td><td> {DM,DR},{DM,DX,DR}                                                                                                                                                             </td><td>                                          </td><td> Memory                          </td><td> The Return address of the instruction is stored in register, and the instruction jumps to address given.                                                                </td></tr>
 <tr><td>JT6        </td><td> RET   </td><td>(<b>Ret</b>urn to Calling Program)                          </td><td> 100110 </td><td> {DM},{DM,DX},{DR}                                                                                                                                                              </td><td>                                          </td><td> Memory                          </td><td> Jumps to address given; can take a register.                                                                                                                                                 </td></tr>
 <tr><td>JT7        </td><td> SKT   </td><td>(<b>S</b>tac<b>k</b> <b>T</b>est)                           </td><td> 100111 </td><td> {DR}                                                                                                                                                                           </td><td>                                          </td><td> Memory                          </td><td> Register given is set to size of stack.                                                                                                                                 </td></tr>
-<tr><td>IO0        </td><td> IWSR  </td><td>(<b>I</b>nteger   <b>W</b>rite to <b>S</b>c<b>r</b>een)     </td><td> 101000 </td><td> {NW,FM,FX},{NW,FM},{NW,FL},{NW,EX}                                                                                                                                             </td><td> FL,EX:[-4096,4095]                       </td><td> Source-Range                    </td><td> outputs an integer to screen from memory.                                                                                                                               </td></tr>
-<tr><td>IO2        </td><td> CWSR  </td><td>(<b>C</b>haracter <b>W</b>rite to <b>S</b>c<b>r</b>een)     </td><td> 101010 </td><td> {NW,FM,FX},{NW,FM},{NW,FL},{NW,EX}                                                                                                                                             </td><td> FL,EX:[-4096,4095]                       </td><td> Source-Range                    </td><td> outputs a character to screen from memory.                                                                                                                              </td></tr>
+<tr><td>IO0        </td><td> IWSR  </td><td>(<b>I</b>nteger   <b>W</b>rite to <b>S</b>c<b>r</b>een)     </td><td> 101000 </td><td> {NW,FM,FX},{NW,FM},{NW,FL},{NW,EX}                                                                                                                                             </td><td> FL,EX:[-32768,32767]                     </td><td> Source-Range                    </td><td> outputs an integer to screen from memory.                                                                                                                               </td></tr>
+<tr><td>IO2        </td><td> CWSR  </td><td>(<b>C</b>haracter <b>W</b>rite to <b>S</b>c<b>r</b>een)     </td><td> 101010 </td><td> {NW,FM,FX},{NW,FM},{NW,FL},{NW,EX}                                                                                                                                             </td><td> FL,EX:[-32768,32767]                     </td><td> Source-Range                    </td><td> outputs a character to screen from memory.                                                                                                                              </td></tr>
 <tr><td>IO1        </td><td> IRKB  </td><td>(<b>I</b>nteger   <b>R</b>ead from <b>K</b>ey<b>b</b>oard)  </td><td> 101001 </td><td> {NW,DM},{NW,DM,DX}                                                                                                                                                             </td><td>                                          </td><td> Dest-Range                      </td><td> inputs an integer from keyboard to memory.                                                                                                                              </td></tr>
 <tr><td>IO3        </td><td> CRKB  </td><td>(<b>C</b>haracter <b>R</b>ead from <b>K</b>ey<b>b</b>oard)  </td><td> 101100 </td><td> {NW,DM},{NW,DM,DX}                                                                                                                                                             </td><td>                                          </td><td> Dest-Range                      </td><td> inputs a character from keyboard to memory.                                                                                                                             </td></tr>
-<tr><td>S0         </td><td> PSH   </td><td>(<b>P</b>u<b>sh</b>)                                        </td><td> 110000 </td><td> {FC},{FL},{EX},{FM}                                                                                                                                                            </td><td> FL,FC,EX:[-4096,4095]                    </td><td> Memory,Literal                  </td><td> pushes the memory element onto the top of the stack                                                                                                                     </td></tr>
+<tr><td>S0         </td><td> PSH   </td><td>(<b>P</b>u<b>sh</b>)                                        </td><td> 110000 </td><td> {FC},{FL},{EX},{FM}                                                                                                                                                            </td><td> FL,FC,EX:[-32768,32767]                  </td><td> Memory,Literal                  </td><td> pushes the memory element onto the top of the stack                                                                                                                     </td></tr>
 <tr><td>S1         </td><td> POP   </td><td>(<b>Pop</b>)                                                </td><td> 110001 </td><td> {DR},{DM}                                                                                                                                                                      </td><td>                                          </td><td> Memory,Literal                  </td><td> pops the top stack element into memory or register.                                                                                                                     </td></tr>
-<tr><td>S2         </td><td> PST   </td><td>(<b>P</b>op and Te<b>st</b>)                                </td><td> 110010 </td><td> {FM,DR},{FM,FX,DR},{FL,DR},{EX,DR}                                                                                                                                             </td><td> FL,EX:[-4096,4095]                       </td><td> Memory,Literal                  </td><td> pops the top stack element, and compares the element with memory or literal: if = then load DR with 0; if < load DR with 2; if > load DR with 3.  </td></tr>
+<tr><td>S2         </td><td> PST   </td><td>(<b>P</b>op and Te<b>st</b>)                                </td><td> 110010 </td><td> {FM,DR},{FM,FX,DR},{FL,DR},{EX,DR}                                                                                                                                             </td><td> FL,EX:[-32768,32767]                     </td><td> Memory,Literal                  </td><td> pops the top stack element, and compares the element with memory or literal: if = then load DR with 0; if < load DR with 2; if > load DR with 3.  </td></tr>
 <tr><td>C0         </td><td> NOP   </td><td>(<b>N</b>on-<b>op</b>erative)                               </td><td> 111101 </td><td> {}                                                                                                                                                                             </td><td>                                          </td><td> OP Only                         </td><td> no operation.                                                                                                                                                           </td></tr>
 <tr><td>C2         </td><td> HLT   </td><td>(<b>H</b>a<b>lt</b>)                                        </td><td> 111110 </td><td> {FC},{EX}                                                                                                                                                                      </td><td> FC:[-4096, 4095]                         </td><td> Halt/Dump                       </td><td> halts the program, and displays the constant to screen.                                                                                                                 </td></tr>
 <tr><td>C1         </td><td> DMP   </td><td>(<b>D</b>u<b>mp</b>)                                        </td><td> 111111 </td><td> {FC},{EX}                                                                                                                                                                      </td><td> FC:[1,3]                                 </td><td> Halt/Dump                       </td><td> displays register and memory contents to screen.  if fc = 1, then level 1 dump; if fc = 2, then level 2 dump; if fc = 3, then level 3 dump.                             </td></tr>
