--- a/dox/user_guide.dox
+++ b/dox/user_guide.dox
@@ -949,8 +949,8 @@ The following tables describe the various instructions with their formats and th
 <tr><td>S1         </td><td> POP   </td><td>(<b>Pop</b>)                                                </td><td> 110001 </td><td> {DR},{DM}                                                                                                                                                                      </td><td>                                          </td><td> Memory,Literal                  </td><td> pops the top stack element into memory or register.                                                                                                                     </td></tr>
 <tr><td>S2         </td><td> PST   </td><td>(<b>P</b>op and Te<b>st</b>)                                </td><td> 110010 </td><td> {FM,DR},{FM,FX,DR},{FL,DR},{EX,DR}                                                                                                                                             </td><td> FL,EX:[-32768,32767]                     </td><td> Memory,Literal                  </td><td> pops the top stack element, and compares the element with memory or literal: if = then load DR with 0; if < load DR with 2; if > load DR with 3.  </td></tr>
 <tr><td>C0         </td><td> NOP   </td><td>(<b>N</b>on-<b>op</b>erative)                               </td><td> 111101 </td><td> {}                                                                                                                                                                             </td><td>                                          </td><td> OP Only                         </td><td> no operation.                                                                                                                                                           </td></tr>
-<tr><td>C2         </td><td> HLT   </td><td>(<b>H</b>a<b>lt</b>)                                        </td><td> 111110 </td><td> {FC},{EX}                                                                                                                                                                      </td><td> FC:[-4096, 4095]                         </td><td> Halt/Dump                       </td><td> halts the program, and displays the constant to screen.                                                                                                                 </td></tr>
-<tr><td>C1         </td><td> DMP   </td><td>(<b>D</b>u<b>mp</b>)                                        </td><td> 111111 </td><td> {FC},{EX}                                                                                                                                                                      </td><td> FC:[1,3]                                 </td><td> Halt/Dump                       </td><td> displays register and memory contents to screen.  if fc = 1, then level 1 dump; if fc = 2, then level 2 dump; if fc = 3, then level 3 dump.                             </td></tr>
+<tr><td>C2         </td><td> HLT   </td><td>(<b>H</b>a<b>lt</b>)                                        </td><td> 111110 </td><td> {FC},{EX}                                                                                                                                                                      </td><td> FC,EX:[-4096, 4095]                      </td><td> Halt/Dump                       </td><td> halts the program, and displays the constant to screen.                                                                                                                 </td></tr>
+<tr><td>C1         </td><td> DMP   </td><td>(<b>D</b>u<b>mp</b>)                                        </td><td> 111111 </td><td> {FC},{EX}                                                                                                                                                                      </td><td> FC,EX:[1,3]                              </td><td> Halt/Dump                       </td><td> displays register and memory contents to screen.  if fc = 1, then level 1 dump; if fc = 2, then level 2 dump; if fc = 3, then level 3 dump.                             </td></tr>
 </table>
 
 The following instructions are unique to URBAN Legend:
