--- a/dox/Test_Cases_SP3/TC42_ErrPrgOOM.dox
+++ b/dox/Test_Cases_SP3/TC42_ErrPrgOOM.dox
@@ -1,6 +1,6 @@
 /*!
 
-\page testcase42 Error attempted program link out of memory.
+\page testcase42 Program OOM
 <h1>Linker Load Phase</h1>
 
 lc4095
